--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,12 +39,12 @@
             {% include 'entry.html' %}
         </div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 {% include 'reload.html' %}
             </div>
-            <div class="col-md-4">
+            <!--div class="col-md-4">
                 {% include 'clock.html' %}
-            </div>
+            </div-->
         </div>
     </div>
     <!--body wrapper end-->
@@ -57,8 +57,6 @@
 <script src="{% static "js/bootstrap.min.js" %}"></script>
 <script src="{% static "js/modernizr.min.js" %}"></script>
 <script src="{% static "js/jquery.nicescroll.js" %}"></script>
-
-<script src="{% static "js/clock.js" %}"></script>
 
 <!--common scripts for all pages-->
 <script src="{% static "js/scripts.js" %}"></script>
