--- a/templates/reload.html
+++ b/templates/reload.html
@@ -1,7 +1,9 @@
 {% load dashboard %}
 <div class="panel panel-info zabbix_issue">
     <div class="panel-heading">
-        <h3 class="panel-title">各个机房入问题总汇</h3>
+        <h3 class="panel-title">各个机房入问题总汇
+            <p class="pull-right">{{ updatetime }}</p>
+        </h3>
     </div>
     <div class="panel-body">
         <table class="table table-bordered">
