--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -68,10 +68,19 @@
                             {% endfor %}
                         </div>
 
+                        <div class="form-group">
+                            <label class="control-label">{{ form.key.label }}</label>
+                            {{ form.key }}
+                            {% for error in form.key.errors %}
+                                <div class="has-error">
+                                    <p class="help-block">{{ error }}</p>
+                                </div>
+                            {% endfor %}
+                        </div>
+
                         <hr>
 
                         <div class="form-group">
-{#                            <label class="control-label"></label>#}
                             <button type="submit" class="btn btn-primary"> 修改 </button>
                             <a role="button" href="{% url 'zabbix:index' %}" class="btn btn-default"> 取消 </a>
                         </div>
