--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="{% url 'zabbix:index' %}">各个机房Zabbix总汇</a></li>
+                    <li ><a href="{% url 'zabbix:top' %}">虚拟机统计</a></li>
                     <li ><a href="{% url 'zabbix:adduser' %}">添加用户</a></li>
                 </ul>
             </div>
