--- a/templates/reload.html
+++ b/templates/reload.html
@@ -15,6 +15,7 @@
                     <th>描述</th>
                     <th>发生时间</th>
                     <th>持续时间</th>
+                    <th>Graph</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,6 +27,11 @@
                     <td>{{ issue.description }}</td>
                     <td>{{ issue.lastchange|date:'Y-m-d H:i:s'}}</td>
                     <td>{{ issue.lastchange|issue_age }}</td>
+                    {% if issue.itemtype == '0' %}
+                        <td><a href="{{ issue.url }}history.php?action=showgraph&itemids[]={{ issue.itemid }}" target="_blank">查看图表</a></td>
+                    {% else %}
+                        <td>没有图表</td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
